--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@rails/webpacker": "^5.4.3",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.4",
     "react": "^18.2.0",
